@@ -19,112 +19,78 @@ import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
-
 public class VehicleService {
+
     private final VehicleRepository vehicleRepo;
     private final UserRepository userRepo;
     private final BrandRepository brandRepo;
     private final ModelRepository modelRepo;
 
-    public VehicleDTO saveVehicle(VehicleDTO dto){
-        User user = userRepo.findById(dto.getUserId()).orElseThrow(()->new RuntimeException("User not found"));
-        Brand brand =brandRepo.findById(dto.getBrand_id()).orElseThrow(()->new RuntimeException("Brand not found"));
-        Model model = modelRepo.findById(dto.getModel_id()).orElseThrow(()->new RuntimeException("Model not found"));
-        Vehicle vehicle = Vehicle.builder()
-                .model(model)
-                .plate(dto.getPlate())
-                .rangeKm((int) dto.getRangeKm())
-                .brand(brand)
-                .connectorType(dto.getConnectorType())
-                .user(user)
-                .variant(dto.getVariant())
-                .build();
+    // SAVE
+    public VehicleDTO saveVehicle(VehicleDTO dto) {
 
-        Vehicle saved= vehicleRepo.save(vehicle);
-        dto.setVehicleId(saved.getVehicleId());
-        return dto;
+        Vehicle v = new Vehicle();
+        v.setVariant(dto.getVariant());
+        v.setPlate(dto.getPlate());
+        v.setRangeKm((Double) dto.getRangeKm());
+        v.setConnectorType(dto.getConnectorType());
+        v.setUser(userRepo.findById(dto.getUserId()).orElseThrow());
+        v.setBrand(brandRepo.findById(dto.getBrand_id()).orElseThrow());
+        v.setModel(modelRepo.findById(dto.getModel_id()).orElseThrow());
 
+        return toDTO(vehicleRepo.save(v));
     }
 
-    public List<VehicleDTO> getAllVehicle(){
-            return vehicleRepo.findAll().stream().map(
-                    v->VehicleDTO.builder()
-                            .vehicleId(v.getVehicleId())
-                            .model_id(v.getModel().getId())
-                            .variant(v.getVariant())
-                            .plate(v.getPlate())
-                            .rangeKm(v.getRangeKm())
-                            .connectorType(v.getConnectorType())
-                            .brand_id((long) v.getBrand().getId())
-                            .userId(v.getUser().getUserId())
-                            .build())
-                    .collect(toList());
-//        return vehicleRepo.findAll().stream().map(v ->VehicleDTO.builder().vehicleId(v.getVehicleId()).model(v.getModel()).batteryCapacityKwh(v.getBatteryCapacityKwh()).efficiencyKmPerKwh(v.getEfficiencyKmPerKwh()).connectorType(v.getConnectorType()).userId(v.getUser().getUserId()).build()).toList();
+    // GET ALL
+    public List<VehicleDTO> getAllVehicle() {
+        return vehicleRepo.findAll().stream().map(this::toDTO).toList();
     }
 
-    public VehicleDTO getVehicleById(String id){
-        Vehicle v =vehicleRepo.findById(id).orElseThrow(() -> new RuntimeException("Vehicle not find"));
-            return VehicleDTO.builder()
-                    .vehicleId(v.getVehicleId())
-                    .model_id(v.getModel().getId())
-                    .variant(v.getVariant())
-                    .brand_name(v.getBrand().getName())
-                    .model_name(v.getModel().getName())
-                    .plate(v.getPlate())
-                    .rangeKm(v.getRangeKm())
-                    .connectorType(v.getConnectorType())
-                    .brand_id((long) v.getBrand().getId())
-                    .userId(v.getUser().getUserId())
-                    .build();
-
-
-//        return VehicleDTO.builder().vehicleId(v.getVehicleId()).model(v.getModel()).batteryCapacityKwh(v.getBatteryCapacityKwh()).efficiencyKmPerKwh(v.getEfficiencyKmPerKwh()).connectorType(v.getConnectorType()).userId(v.getUser().getUserId()).build();
+    // GET BY ID
+    public VehicleDTO getVehicleById(String id) {
+        return toDTO(vehicleRepo.findById(id).orElseThrow());
     }
-//
-    public void deleteVehicle(String id){
-        System.out.println("Deleting Vehicle ID: " + id);
-        if(!vehicleRepo.existsById(id)){
-            throw new RuntimeException("Vehicle not found");
-        }
+
+    // UPDATE
+    public VehicleDTO upDateVehicle(String id, VehicleDTO dto) {
+
+        Vehicle v = vehicleRepo.findById(id).orElseThrow();
+
+        if(dto.getPlate()!=null) v.setPlate(dto.getPlate());
+        if(dto.getRangeKm()!=0) v.setRangeKm((double) dto.getRangeKm());
+        if(dto.getVariant()!=0) v.setVariant(dto.getVariant());
+        if(dto.getConnectorType()!=null) v.setConnectorType(dto.getConnectorType());
+
+        if(dto.getUserId()!=null) v.setUser(userRepo.findById(dto.getUserId()).orElse(v.getUser()));
+        if(dto.getBrand_id()!=null) v.setBrand(brandRepo.findById(dto.getBrand_id()).orElse(v.getBrand()));
+        if(dto.getModel_id()!=null) v.setModel(modelRepo.findById(dto.getModel_id()).orElse(v.getModel()));
+
+        return toDTO(vehicleRepo.save(v));
+    }
+
+    // DELETE
+    public void deleteVehicle(String id) {
         vehicleRepo.deleteById(id);
     }
-    public List<VehicleDTO> getVehicleByuserId(String userId) {
-        List<Vehicle> vehicles = vehicleRepo.findByUser_UserId(userId);
 
-
-
-        return vehicles.stream()
-                .map(v -> VehicleDTO.builder()
-                        .vehicleId(v.getVehicleId())
-                        .model_id(v.getModel().getId())
-                        .variant(v.getVariant())
-                        .brand_name(v.getBrand().getName())
-                        .model_name(v.getModel().getName())
-                        .plate(v.getPlate())
-                        .rangeKm(v.getRangeKm())
-                        .connectorType(v.getConnectorType())
-                        .brand_id((long) v.getBrand().getId())
-                        .userId(v.getUser().getUserId())
-                        .build())
-                .toList();
-    }
-//
-//
-    public  VehicleDTO upDateVehicle(String id,VehicleDTO dto){
-        Vehicle vehicle = vehicleRepo.findById(id).orElseThrow(()-> new RuntimeException("Vehicle not found"));
-        User user =userRepo.findById(dto.getUserId()).orElseThrow(()->new RuntimeException("User not found"));
-        Model model =modelRepo.findById(dto.getModel_id()).orElseThrow(()->new RuntimeException("Model not found"));
-        Brand brand =brandRepo.findById(dto.getBrand_id()).orElseThrow();
-        vehicle.setModel(model);
-        vehicle.setPlate(dto.getPlate());
-        vehicle.setRangeKm((int) dto.getRangeKm());
-        vehicle.setConnectorType(dto.getConnectorType());
-        vehicle.setBrand(brand);
-        vehicle.setVariant(dto.getVariant());
-        vehicle.setUser(user);
-        vehicleRepo.save(vehicle);
-        dto.setVehicleId(id);
-        return  dto;
+    // GET BY USER
+    public List<VehicleDTO> getVehicleByUserId(String userId) {
+        return vehicleRepo.findByUser_UserId(userId).stream().map(this::toDTO).toList();
     }
 
+    // ENTITY → DTO
+    private VehicleDTO toDTO(Vehicle v){
+        return VehicleDTO.builder()
+                .vehicleId(v.getVehicleId())
+                .variant(v.getVariant())
+                .plate(v.getPlate())
+                .rangeKm(v.getRangeKm())
+                .connectorType(v.getConnectorType())
+                .userId(v.getUser().getUserId())
+                .brand_id(v.getBrand().getId())
+                .brand_name(v.getBrand().getName())
+                .model_id(v.getModel().getId())
+                .model_name(v.getModel().getName())
+                .build();
+    }
 }
